--- a/server/package.json
+++ b/server/package.json
@@ -3,10 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
-  "engines": {
-    "node": "10.16.3",
-    "npm": "6.9.0"
-  },
   "scripts": {
     "start": "yarn build && node dist/index.js",
     "build": "babel src/ -d dist",
@@ -20,7 +16,11 @@
     "@babel/core": "^7.4.5",
     "@babel/node": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
+    "dotenv": "^8.1.0",
     "express": "^4.17.1",
-    "nodemon": "^1.19.1"
+    "mongoose": "^5.6.10",
+    "nodemon": "^1.19.1",
+    "passport": "^0.4.0",
+    "passport-google-oauth20": "^2.0.0"
   }
 }
