--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "server": "cd server/ && yarn build && yarn start",
     "client": "cd client/ && yarn start",
-    "build:client": "cd client/ && yarn build",
+    "build": "cd client/ && yarn build",
     "server:dev": "cd server/ && yarn dev",
     "start": "concurrently \"yarn server\" \"yarn client\"",
     "dev": "concurrently \"yarn server:dev\" \"yarn client\"",
