--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "server:dev": "cd server/ && yarn dev",
     "start": "concurrently \"yarn server\" \"yarn client\"",
     "dev": "concurrently \"yarn server:dev\" \"yarn client\"",
-    "postinstall": "yarn install:server",
+    "postinstall": "yarn install:server && yarn install:client",
     "install:server": "cd server/ && yarn",
+    "install:client": "cd client/ && yarn",
     "deploy:server:prod": "git push heroku master",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
